<resources>
    <string-array name="grades">
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
    </string-array>
    <string name="app_name">Suwon Mate(Native Port)</string>
    <string name="inquire_subject">Inquire Open Subject</string>
    <string name="help">Help</string>
    <string name="schedule">academic calendar</string>
    <string name="favorite">Favorite Subject(Beta)</string>
    <string name="noti">Information</string>
    <string name="settings">Settings</string>
    <string name="email">orgsun30812@gmail+suwon_mate.com</string>
    <string name="help_icon">Help Icon</string>
    <string name="major">"Default major: "</string>
    <string name="depart">"Default department: "</string>
    <string name="student_setting_desc">Select your department, major and grade for default value in open class menu</string>
    <string name="student_info">Student Info</string>
    <string name="desc">Description</string>
    <string name="target_grade">Target Grade: %1$s</string>
    <string name="target_dept">Target Department: %1$s</string>
    <string name="target_major">Target Major: %1$s</string>
    <string name="subject_code">Subject Code: %1$s</string>
    <string name="open_year">Open Year: %1$s</string>
    <string name="kind_subject">Kind Of Subject: %1$s</string>
    <string name="point">Point: %1$s</string>
    <string name="gender">Gender: %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="work_grade">Work Grade: %1$s</string>
    <string name="copy">Copy</string>
    <string name="target_student">Target Student</string>
    <string name="subject_info">Subject Info</string>
    <string name="professor_info">Professor info</string>
    <string name="extra_info">Extra Info</string>
    <string name="relate_info_study">Class Related Info</string>
    <string name="search">Search</string>
    <string name="location">Classroom Location and Time: %1$s</string>
    <string name="ge_class_region">GE Class Region: %1$s</string>
    <string name="language">Class Language: %1$s</string>
    <string name="promise">Contract Information: %1$s</string>
    <string name="method">Class method: %1$s</string>
    <string name="subject_code_copied">Subject code was copied</string>
    <string name="version_desc">App Version: %1$s\nDB Version: %2$s</string>
    <string name="unknown">Unknown</string>
    <string name="db_get_err">Server Error Detected</string>
    <string name="grade">"Default grade: "</string>
    <string name="title">Title</string>
    <string name="get_help">Get Help</string>
    <string name="data_save_mode">Data save mode</string>
    <string name="data_save_mode_desc">For save your data, somw function will be disabled.</string>
    <string name="live_search">Type to search</string>
    <string name="function_settings">Function Settings</string>
    <string name="function_settings_desc">Data save mode: For save your internet data, some function will be disabled.</string>
    <string name="favorite_add">Add to Favorites</string>
    <string name="today_schedule">Ongoing Schedule: %1$s</string>
    <string name="none">None</string>
</resources>