<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">
    <Button
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        app:icon="@drawable/ic_help" />
    <Button
        android:id="@+id/schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/schedule"
        app:icon="@drawable/ic_clock" />
    <Button
        android:enabled="true"
        android:id="@+id/inquire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/inquire_subject"
        app:icon="@drawable/ic_calender" />
    <Button
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/noti"
        app:icon="@drawable/ic_alert" />
    <Button
        android:enabled="false"
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/favorite"
        app:icon="@drawable/ic_star"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings"
        android:layout_marginTop="20dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"/>
</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>