<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dp">

                    <include
                        android:id="@+id/target_student_bar"
                        layout="@layout/icon_title" />

                    <TextView
                        android:id="@+id/taget_grade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/target_grade"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/taget_depart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/target_dept"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/taget_major"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/target_major"
                        android:textSize="16sp" />
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dp">

                    <include
                        android:id="@+id/subject_info_bar"
                        layout="@layout/icon_title" />

                    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent">

                        <TextView
                            android:id="@+id/subject_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/subject_code"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/copy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/copy"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:src="@drawable/ic_baseline_content_copy_24"
                            android:tooltipText="@string/copy"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/open_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/open_year"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/subject_kind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kind_subject"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/point"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/point"
                        android:textSize="16sp" />
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dp">

                    <include
                        android:id="@+id/professor_info_bar"
                        layout="@layout/icon_title" />

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="16sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/search"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:src="@drawable/ic_search"
                            android:tooltipText="@string/search"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <TextView
                        android:id="@+id/work_grade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work_grade"
                        android:textSize="16sp" />
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dp">

                    <include
                        android:id="@+id/class_info_bar"
                        layout="@layout/icon_title" />

                    <TextView
                        android:id="@+id/working_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ge_class_region"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textSize="16sp" />
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dp">

                    <include
                        android:id="@+id/extra_info_bar"
                        layout="@layout/icon_title" />

                    <TextView
                        android:id="@+id/promise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/promise"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/study_way"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/method"
                        android:textSize="16sp" />

                </TableLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        app:backgroundTint="@color/suwon_navy_light"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/favorite"
        app:elevation="4dp"
        android:text="@string/favorite_add"
        app:icon="@drawable/ic_star" />
    </RelativeLayout>

    </ScrollView>